--- a/ui/files/修改课程的实验/styles.css
+++ b/ui/files/修改课程的实验/styles.css
@@ -12,7 +12,7 @@
   position:absolute;
   z-index:0;
 }
-#u563_div {
+#u568_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -30,7 +30,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u563 {
+#u568 {
   border-width:0px;
   position:absolute;
   left:87px;
@@ -38,7 +38,7 @@
   width:1228px;
   height:734px;
 }
-#u563_text {
+#u568_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -47,7 +47,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u564 {
+#u569 {
   border-width:0px;
   position:absolute;
   left:235px;
@@ -55,150 +55,28 @@
   width:822px;
   height:195px;
 }
-#u565_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:274px;
-  height:30px;
-}
-#u565 {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:274px;
-  height:30px;
-}
-#u565_text {
-  border-width:0px;
-  position:absolute;
-  left:2px;
-  top:7px;
-  width:270px;
-  word-wrap:break-word;
-}
-#u566_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:274px;
-  height:30px;
-}
-#u566 {
-  border-width:0px;
-  position:absolute;
-  left:274px;
-  top:0px;
-  width:274px;
-  height:30px;
-}
-#u566_text {
-  border-width:0px;
-  position:absolute;
-  left:2px;
-  top:7px;
-  width:270px;
-  word-wrap:break-word;
-}
-#u567_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:274px;
-  height:30px;
-}
-#u567 {
-  border-width:0px;
-  position:absolute;
-  left:548px;
-  top:0px;
-  width:274px;
-  height:30px;
-}
-#u567_text {
-  border-width:0px;
-  position:absolute;
-  left:2px;
-  top:7px;
-  width:270px;
-  word-wrap:break-word;
-}
-#u568_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:274px;
-  height:72px;
-}
-#u568 {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:30px;
-  width:274px;
-  height:72px;
-}
-#u568_text {
-  border-width:0px;
-  position:absolute;
-  left:2px;
-  top:28px;
-  width:270px;
-  word-wrap:break-word;
-}
-#u569_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:274px;
-  height:72px;
-}
-#u569 {
-  border-width:0px;
-  position:absolute;
-  left:274px;
-  top:30px;
-  width:274px;
-  height:72px;
-}
-#u569_text {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:0px;
-  visibility:hidden;
-  word-wrap:break-word;
-}
 #u570_img {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
   width:274px;
-  height:72px;
+  height:30px;
 }
 #u570 {
   border-width:0px;
   position:absolute;
-  left:548px;
-  top:30px;
+  left:0px;
+  top:0px;
   width:274px;
-  height:72px;
+  height:30px;
 }
 #u570_text {
   border-width:0px;
   position:absolute;
-  left:0px;
-  top:0px;
-  width:0px;
-  visibility:hidden;
+  left:2px;
+  top:7px;
+  width:270px;
   word-wrap:break-word;
 }
 #u571_img {
@@ -207,21 +85,21 @@
   left:0px;
   top:0px;
   width:274px;
-  height:93px;
+  height:30px;
 }
 #u571 {
   border-width:0px;
   position:absolute;
-  left:0px;
-  top:102px;
+  left:274px;
+  top:0px;
   width:274px;
-  height:93px;
+  height:30px;
 }
 #u571_text {
   border-width:0px;
   position:absolute;
   left:2px;
-  top:38px;
+  top:7px;
   width:270px;
   word-wrap:break-word;
 }
@@ -231,23 +109,22 @@
   left:0px;
   top:0px;
   width:274px;
-  height:93px;
+  height:30px;
 }
 #u572 {
   border-width:0px;
   position:absolute;
-  left:274px;
-  top:102px;
+  left:548px;
+  top:0px;
   width:274px;
-  height:93px;
+  height:30px;
 }
 #u572_text {
   border-width:0px;
   position:absolute;
-  left:0px;
-  top:0px;
-  width:0px;
-  visibility:hidden;
+  left:2px;
+  top:7px;
+  width:270px;
   word-wrap:break-word;
 }
 #u573_img {
@@ -256,17 +133,41 @@
   left:0px;
   top:0px;
   width:274px;
-  height:93px;
+  height:72px;
 }
 #u573 {
   border-width:0px;
   position:absolute;
-  left:548px;
-  top:102px;
+  left:0px;
+  top:30px;
   width:274px;
-  height:93px;
+  height:72px;
 }
 #u573_text {
+  border-width:0px;
+  position:absolute;
+  left:2px;
+  top:28px;
+  width:270px;
+  word-wrap:break-word;
+}
+#u574_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:274px;
+  height:72px;
+}
+#u574 {
+  border-width:0px;
+  position:absolute;
+  left:274px;
+  top:30px;
+  width:274px;
+  height:72px;
+}
+#u574_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -275,7 +176,106 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u574_img {
+#u575_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:274px;
+  height:72px;
+}
+#u575 {
+  border-width:0px;
+  position:absolute;
+  left:548px;
+  top:30px;
+  width:274px;
+  height:72px;
+}
+#u575_text {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:0px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u576_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:274px;
+  height:93px;
+}
+#u576 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:102px;
+  width:274px;
+  height:93px;
+}
+#u576_text {
+  border-width:0px;
+  position:absolute;
+  left:2px;
+  top:38px;
+  width:270px;
+  word-wrap:break-word;
+}
+#u577_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:274px;
+  height:93px;
+}
+#u577 {
+  border-width:0px;
+  position:absolute;
+  left:274px;
+  top:102px;
+  width:274px;
+  height:93px;
+}
+#u577_text {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:0px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u578_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:274px;
+  height:93px;
+}
+#u578 {
+  border-width:0px;
+  position:absolute;
+  left:548px;
+  top:102px;
+  width:274px;
+  height:93px;
+}
+#u578_text {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:0px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u579_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -283,7 +283,7 @@
   width:1031px;
   height:43px;
 }
-#u574 {
+#u579 {
   border-width:0px;
   position:absolute;
   left:146px;
@@ -293,7 +293,7 @@
   font-size:20px;
   color:#006666;
 }
-#u574_text {
+#u579_text {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -301,7 +301,7 @@
   width:1027px;
   word-wrap:break-word;
 }
-#u575 {
+#u580 {
   border-width:0px;
   position:absolute;
   left:595px;
@@ -309,7 +309,7 @@
   width:103px;
   height:25px;
 }
-#u575_input {
+#u580_input {
   position:absolute;
   left:0px;
   top:0px;
@@ -323,7 +323,7 @@
   color:#000000;
   text-align:left;
 }
-#u576 {
+#u581 {
   border-width:0px;
   position:absolute;
   left:595px;
@@ -331,7 +331,7 @@
   width:123px;
   height:25px;
 }
-#u576_input {
+#u581_input {
   position:absolute;
   left:0px;
   top:0px;
@@ -345,7 +345,7 @@
   color:#333333;
   text-align:left;
 }
-#u577_div {
+#u582_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -362,7 +362,7 @@
   font-size:18px;
   color:#FFFFFF;
 }
-#u577 {
+#u582 {
   border-width:0px;
   position:absolute;
   left:1036px;
@@ -372,7 +372,7 @@
   font-size:18px;
   color:#FFFFFF;
 }
-#u577_text {
+#u582_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -380,7 +380,7 @@
   width:141px;
   word-wrap:break-word;
 }
-#u578 {
+#u583 {
   border-width:0px;
   position:absolute;
   left:830px;
@@ -388,7 +388,7 @@
   width:140px;
   height:25px;
 }
-#u578_input {
+#u583_input {
   position:absolute;
   left:0px;
   top:0px;
@@ -402,7 +402,7 @@
   color:#000000;
   text-align:left;
 }
-#u579 {
+#u584 {
   border-width:0px;
   position:absolute;
   left:830px;
@@ -410,7 +410,7 @@
   width:130px;
   height:25px;
 }
-#u579_input {
+#u584_input {
   position:absolute;
   left:0px;
   top:0px;
@@ -424,7 +424,7 @@
   color:#000000;
   text-align:left;
 }
-#u580 {
+#u585 {
   border-width:0px;
   position:absolute;
   left:928px;
@@ -432,7 +432,7 @@
   width:140px;
   height:25px;
 }
-#u580_input {
+#u585_input {
   position:absolute;
   left:0px;
   top:0px;
@@ -446,7 +446,7 @@
   color:#333333;
   text-align:center;
 }
-#u581_img {
+#u586_img {
   border-width:0px;
   position:absolute;
   left:-13px;
@@ -454,7 +454,7 @@
   width:31px;
   height:215px;
 }
-#u581 {
+#u586 {
   border-width:0px;
   position:absolute;
   left:579px;
@@ -462,7 +462,7 @@
   width:5px;
   height:200px;
 }
-#u581_text {
+#u586_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -471,7 +471,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u582_div {
+#u587_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -492,7 +492,7 @@
   text-decoration:underline;
   color:#CC0000;
 }
-#u582 {
+#u587 {
   border-width:0px;
   position:absolute;
   left:527px;
@@ -506,7 +506,7 @@
   text-decoration:underline;
   color:#CC0000;
 }
-#u582_text {
+#u587_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -514,7 +514,7 @@
   width:239px;
   word-wrap:break-word;
 }
-#u583_img {
+#u588_img {
   border-width:0px;
   position:absolute;
   left:-13px;
@@ -522,7 +522,7 @@
   width:31px;
   height:215px;
 }
-#u583 {
+#u588 {
   border-width:0px;
   position:absolute;
   left:1004px;
@@ -530,7 +530,7 @@
   width:5px;
   height:200px;
 }
-#u583_text {
+#u588_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -539,7 +539,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u584_div {
+#u589_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -560,7 +560,7 @@
   text-decoration:underline;
   color:#CC0000;
 }
-#u584 {
+#u589 {
   border-width:0px;
   position:absolute;
   left:956px;
@@ -574,11 +574,48 @@
   text-decoration:underline;
   color:#CC0000;
 }
-#u584_text {
+#u589_text {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
   width:134px;
+  white-space:nowrap;
+}
+#u590_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:181px;
+  height:22px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'Arial Negreta', 'Arial';
+  font-weight:700;
+  font-style:normal;
+}
+#u590 {
+  border-width:0px;
+  position:absolute;
+  left:620px;
+  top:126px;
+  width:181px;
+  height:22px;
+  font-family:'Arial Negreta', 'Arial';
+  font-weight:700;
+  font-style:normal;
+}
+#u590_text {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:181px;
   white-space:nowrap;
 }
