--- a/ui/files/学生选课界面/styles.css
+++ b/ui/files/学生选课界面/styles.css
@@ -12,7 +12,7 @@
   position:absolute;
   z-index:0;
 }
-#u470_div {
+#u471_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -30,7 +30,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u470 {
+#u471 {
   border-width:0px;
   position:absolute;
   left:169px;
@@ -38,7 +38,7 @@
   width:1119px;
   height:705px;
 }
-#u470_text {
+#u471_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -47,37 +47,13 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u471 {
+#u472 {
   border-width:0px;
   position:absolute;
   left:261px;
   top:240px;
   width:891px;
   height:138px;
-}
-#u472_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:223px;
-  height:32px;
-}
-#u472 {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:223px;
-  height:32px;
-}
-#u472_text {
-  border-width:0px;
-  position:absolute;
-  left:2px;
-  top:8px;
-  width:219px;
-  word-wrap:break-word;
 }
 #u473_img {
   border-width:0px;
@@ -90,7 +66,7 @@
 #u473 {
   border-width:0px;
   position:absolute;
-  left:223px;
+  left:0px;
   top:0px;
   width:223px;
   height:32px;
@@ -108,15 +84,15 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:222px;
+  width:223px;
   height:32px;
 }
 #u474 {
   border-width:0px;
   position:absolute;
-  left:446px;
+  left:223px;
   top:0px;
-  width:222px;
+  width:223px;
   height:32px;
 }
 #u474_text {
@@ -124,7 +100,7 @@
   position:absolute;
   left:2px;
   top:8px;
-  width:218px;
+  width:219px;
   word-wrap:break-word;
 }
 #u475_img {
@@ -132,24 +108,23 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:223px;
+  width:222px;
   height:32px;
 }
 #u475 {
   border-width:0px;
   position:absolute;
-  left:668px;
+  left:446px;
   top:0px;
-  width:223px;
+  width:222px;
   height:32px;
 }
 #u475_text {
   border-width:0px;
   position:absolute;
-  left:0px;
-  top:0px;
-  width:0px;
-  visibility:hidden;
+  left:2px;
+  top:8px;
+  width:218px;
   word-wrap:break-word;
 }
 #u476_img {
@@ -158,22 +133,23 @@
   left:0px;
   top:0px;
   width:223px;
-  height:31px;
+  height:32px;
 }
 #u476 {
   border-width:0px;
   position:absolute;
-  left:0px;
-  top:32px;
+  left:668px;
+  top:0px;
   width:223px;
-  height:31px;
+  height:32px;
 }
 #u476_text {
   border-width:0px;
   position:absolute;
-  left:2px;
-  top:8px;
-  width:219px;
+  left:0px;
+  top:0px;
+  width:0px;
+  visibility:hidden;
   word-wrap:break-word;
 }
 #u477_img {
@@ -187,12 +163,10 @@
 #u477 {
   border-width:0px;
   position:absolute;
-  left:223px;
+  left:0px;
   top:32px;
   width:223px;
   height:31px;
-  text-decoration:underline;
-  color:#00CCFF;
 }
 #u477_text {
   border-width:0px;
@@ -207,23 +181,25 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:222px;
+  width:223px;
   height:31px;
 }
 #u478 {
   border-width:0px;
   position:absolute;
-  left:446px;
+  left:223px;
   top:32px;
-  width:222px;
+  width:223px;
   height:31px;
+  text-decoration:underline;
+  color:#00CCFF;
 }
 #u478_text {
   border-width:0px;
   position:absolute;
   left:2px;
   top:8px;
-  width:218px;
+  width:219px;
   word-wrap:break-word;
 }
 #u479_img {
@@ -231,10 +207,34 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:223px;
+  width:222px;
   height:31px;
 }
 #u479 {
+  border-width:0px;
+  position:absolute;
+  left:446px;
+  top:32px;
+  width:222px;
+  height:31px;
+}
+#u479_text {
+  border-width:0px;
+  position:absolute;
+  left:2px;
+  top:8px;
+  width:218px;
+  word-wrap:break-word;
+}
+#u480_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:223px;
+  height:31px;
+}
+#u480 {
   border-width:0px;
   position:absolute;
   left:668px;
@@ -244,35 +244,11 @@
   text-decoration:underline;
   color:#3333FF;
 }
-#u479_text {
-  border-width:0px;
-  position:absolute;
-  left:2px;
-  top:8px;
-  width:219px;
-  word-wrap:break-word;
-}
-#u480_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:223px;
-  height:75px;
-}
-#u480 {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:63px;
-  width:223px;
-  height:75px;
-}
 #u480_text {
   border-width:0px;
   position:absolute;
   left:2px;
-  top:30px;
+  top:8px;
   width:219px;
   word-wrap:break-word;
 }
@@ -287,12 +263,10 @@
 #u481 {
   border-width:0px;
   position:absolute;
-  left:223px;
+  left:0px;
   top:63px;
   width:223px;
   height:75px;
-  text-decoration:underline;
-  color:#00CCFF;
 }
 #u481_text {
   border-width:0px;
@@ -307,23 +281,25 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:222px;
+  width:223px;
   height:75px;
 }
 #u482 {
   border-width:0px;
   position:absolute;
-  left:446px;
+  left:223px;
   top:63px;
-  width:222px;
+  width:223px;
   height:75px;
+  text-decoration:underline;
+  color:#00CCFF;
 }
 #u482_text {
   border-width:0px;
   position:absolute;
   left:2px;
   top:30px;
-  width:218px;
+  width:219px;
   word-wrap:break-word;
 }
 #u483_img {
@@ -331,10 +307,34 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:223px;
+  width:222px;
   height:75px;
 }
 #u483 {
+  border-width:0px;
+  position:absolute;
+  left:446px;
+  top:63px;
+  width:222px;
+  height:75px;
+}
+#u483_text {
+  border-width:0px;
+  position:absolute;
+  left:2px;
+  top:30px;
+  width:218px;
+  word-wrap:break-word;
+}
+#u484_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:223px;
+  height:75px;
+}
+#u484 {
   border-width:0px;
   position:absolute;
   left:668px;
@@ -344,7 +344,7 @@
   text-decoration:underline;
   color:#3333CC;
 }
-#u483_text {
+#u484_text {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -352,7 +352,7 @@
   width:219px;
   word-wrap:break-word;
 }
-#u484 {
+#u485 {
   border-width:0px;
   position:absolute;
   left:294px;
@@ -360,7 +360,7 @@
   width:140px;
   height:25px;
 }
-#u484_input {
+#u485_input {
   position:absolute;
   left:0px;
   top:0px;
@@ -374,7 +374,7 @@
   color:#333333;
   text-align:center;
 }
-#u485 {
+#u486 {
   border-width:0px;
   position:absolute;
   left:519px;
@@ -382,7 +382,7 @@
   width:300px;
   height:25px;
 }
-#u485_input {
+#u486_input {
   position:absolute;
   left:0px;
   top:0px;
@@ -396,7 +396,7 @@
   color:#000000;
   text-align:left;
 }
-#u486_img {
+#u487_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -404,38 +404,13 @@
   width:19px;
   height:17px;
 }
-#u486 {
+#u487 {
   border-width:0px;
   position:absolute;
   left:409px;
   top:177px;
   width:19px;
   height:17px;
-}
-#u486_text {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:0px;
-  visibility:hidden;
-  word-wrap:break-word;
-}
-#u487_img {
-  border-width:0px;
-  position:absolute;
-  left:-13px;
-  top:-2px;
-  width:31px;
-  height:244px;
-}
-#u487 {
-  border-width:0px;
-  position:absolute;
-  left:416px;
-  top:194px;
-  width:5px;
-  height:229px;
 }
 #u487_text {
   border-width:0px;
@@ -446,37 +421,38 @@
   visibility:hidden;
   word-wrap:break-word;
 }
+#u488_img {
+  border-width:0px;
+  position:absolute;
+  left:-13px;
+  top:-2px;
+  width:31px;
+  height:244px;
+}
 #u488 {
+  border-width:0px;
+  position:absolute;
+  left:416px;
+  top:194px;
+  width:5px;
+  height:229px;
+}
+#u488_text {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:0px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u489 {
   border-width:0px;
   position:absolute;
   left:369px;
   top:423px;
   width:100px;
   height:120px;
-}
-#u489_img {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:100px;
-  height:30px;
-}
-#u489 {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:100px;
-  height:30px;
-}
-#u489_text {
-  border-width:0px;
-  position:absolute;
-  left:2px;
-  top:7px;
-  width:96px;
-  word-wrap:break-word;
 }
 #u490_img {
   border-width:0px;
@@ -490,7 +466,7 @@
   border-width:0px;
   position:absolute;
   left:0px;
-  top:30px;
+  top:0px;
   width:100px;
   height:30px;
 }
@@ -514,7 +490,7 @@
   border-width:0px;
   position:absolute;
   left:0px;
-  top:60px;
+  top:30px;
   width:100px;
   height:30px;
 }
@@ -538,7 +514,7 @@
   border-width:0px;
   position:absolute;
   left:0px;
-  top:90px;
+  top:60px;
   width:100px;
   height:30px;
 }
@@ -553,12 +529,36 @@
 #u493_img {
   border-width:0px;
   position:absolute;
+  left:0px;
+  top:0px;
+  width:100px;
+  height:30px;
+}
+#u493 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:90px;
+  width:100px;
+  height:30px;
+}
+#u493_text {
+  border-width:0px;
+  position:absolute;
+  left:2px;
+  top:7px;
+  width:96px;
+  word-wrap:break-word;
+}
+#u494_img {
+  border-width:0px;
+  position:absolute;
   left:-13px;
   top:-2px;
   width:31px;
   height:198px;
 }
-#u493 {
+#u494 {
   border-width:0px;
   position:absolute;
   left:1037px;
@@ -566,7 +566,7 @@
   width:5px;
   height:183px;
 }
-#u493_text {
+#u494_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -575,7 +575,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u494_div {
+#u495_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -590,7 +590,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u494 {
+#u495 {
   border-width:0px;
   position:absolute;
   left:1011px;
@@ -598,7 +598,7 @@
   width:225px;
   height:16px;
 }
-#u494_text {
+#u495_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -606,7 +606,7 @@
   width:225px;
   white-space:nowrap;
 }
-#u495 {
+#u496 {
   border-width:0px;
   position:absolute;
   left:543px;
@@ -614,7 +614,7 @@
   width:140px;
   height:25px;
 }
-#u495_input {
+#u496_input {
   position:absolute;
   left:0px;
   top:0px;
@@ -628,7 +628,7 @@
   color:#333333;
   text-align:center;
 }
-#u496_img {
+#u497_img {
   border-width:0px;
   position:absolute;
   left:-13px;
@@ -636,7 +636,7 @@
   width:31px;
   height:198px;
 }
-#u496 {
+#u497 {
   border-width:0px;
   position:absolute;
   left:610px;
@@ -644,7 +644,7 @@
   width:5px;
   height:183px;
 }
-#u496_text {
+#u497_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -653,7 +653,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u497_div {
+#u498_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -674,7 +674,7 @@
   text-decoration:underline;
   color:#CC0000;
 }
-#u497 {
+#u498 {
   border-width:0px;
   position:absolute;
   left:546px;
@@ -688,7 +688,7 @@
   text-decoration:underline;
   color:#CC0000;
 }
-#u497_text {
+#u498_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -696,7 +696,7 @@
   width:239px;
   word-wrap:break-word;
 }
-#u498_img {
+#u499_img {
   border-width:0px;
   position:absolute;
   left:-2px;
@@ -704,7 +704,7 @@
   width:215px;
   height:31px;
 }
-#u498 {
+#u499 {
   border-width:0px;
   position:absolute;
   left:693px;
@@ -712,7 +712,7 @@
   width:200px;
   height:5px;
 }
-#u498_text {
+#u499_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -721,7 +721,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u499_div {
+#u500_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -742,7 +742,7 @@
   text-decoration:underline;
   color:#CC0000;
 }
-#u499 {
+#u500 {
   border-width:0px;
   position:absolute;
   left:903px;
@@ -756,7 +756,7 @@
   text-decoration:underline;
   color:#CC0000;
 }
-#u499_text {
+#u500_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -764,7 +764,7 @@
   width:239px;
   word-wrap:break-word;
 }
-#u500_img {
+#u501_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -772,7 +772,7 @@
   width:1031px;
   height:43px;
 }
-#u500 {
+#u501 {
   border-width:0px;
   position:absolute;
   left:205px;
@@ -782,11 +782,48 @@
   font-size:20px;
   color:#006666;
 }
-#u500_text {
+#u501_text {
   border-width:0px;
   position:absolute;
   left:2px;
   top:10px;
   width:1027px;
   word-wrap:break-word;
+}
+#u502_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:73px;
+  height:22px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'Arial Negreta', 'Arial';
+  font-weight:700;
+  font-style:normal;
+}
+#u502 {
+  border-width:0px;
+  position:absolute;
+  left:651px;
+  top:117px;
+  width:73px;
+  height:22px;
+  font-family:'Arial Negreta', 'Arial';
+  font-weight:700;
+  font-style:normal;
+}
+#u502_text {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:73px;
+  white-space:nowrap;
 }
