--- a/ui/files/新增教师/styles.css
+++ b/ui/files/新增教师/styles.css
@@ -3,7 +3,7 @@
   background-image:none;
   position:static;
   left:auto;
-  width:1293px;
+  width:1309px;
   margin-left:0;
   margin-right:0;
   text-align:left;
@@ -12,7 +12,7 @@
   position:absolute;
   z-index:0;
 }
-#u522_div {
+#u524_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -30,15 +30,15 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u522 {
+#u524 {
   border-width:0px;
   position:absolute;
-  left:41px;
-  top:106px;
+  left:57px;
+  top:74px;
   width:1252px;
   height:656px;
 }
-#u522_text {
+#u524_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -47,55 +47,11 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u523 {
-  border-width:0px;
-  position:absolute;
-  left:347px;
-  top:233px;
-  width:300px;
-  height:25px;
-}
-#u523_input {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:300px;
-  height:25px;
-  font-family:'Arial Normal', 'Arial';
-  font-weight:400;
-  font-style:normal;
-  font-size:13px;
-  text-decoration:none;
-  color:#000000;
-  text-align:left;
-}
-#u524 {
-  border-width:0px;
-  position:absolute;
-  left:347px;
-  top:276px;
-  width:300px;
-  height:25px;
-}
-#u524_input {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:300px;
-  height:25px;
-  font-family:'Arial Normal', 'Arial';
-  font-weight:400;
-  font-style:normal;
-  font-size:13px;
-  text-decoration:none;
-  color:#000000;
-  text-align:left;
-}
 #u525 {
   border-width:0px;
   position:absolute;
-  left:347px;
-  top:311px;
+  left:540px;
+  top:246px;
   width:300px;
   height:25px;
 }
@@ -116,12 +72,56 @@
 #u526 {
   border-width:0px;
   position:absolute;
-  left:507px;
-  top:369px;
-  width:140px;
+  left:540px;
+  top:289px;
+  width:300px;
   height:25px;
 }
 #u526_input {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:300px;
+  height:25px;
+  font-family:'Arial Normal', 'Arial';
+  font-weight:400;
+  font-style:normal;
+  font-size:13px;
+  text-decoration:none;
+  color:#000000;
+  text-align:left;
+}
+#u527 {
+  border-width:0px;
+  position:absolute;
+  left:540px;
+  top:324px;
+  width:300px;
+  height:25px;
+}
+#u527_input {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:300px;
+  height:25px;
+  font-family:'Arial Normal', 'Arial';
+  font-weight:400;
+  font-style:normal;
+  font-size:13px;
+  text-decoration:none;
+  color:#000000;
+  text-align:left;
+}
+#u528 {
+  border-width:0px;
+  position:absolute;
+  left:700px;
+  top:382px;
+  width:140px;
+  height:25px;
+}
+#u528_input {
   position:absolute;
   left:0px;
   top:0px;
@@ -135,74 +135,12 @@
   color:#333333;
   text-align:center;
 }
-#u527_div {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:61px;
-  height:16px;
-  background:inherit;
-  background-color:rgba(255, 255, 255, 0);
-  border:none;
-  border-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-}
-#u527 {
-  border-width:0px;
-  position:absolute;
-  left:276px;
-  top:238px;
-  width:61px;
-  height:16px;
-}
-#u527_text {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:61px;
-  white-space:nowrap;
-}
-#u528_div {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:61px;
-  height:16px;
-  background:inherit;
-  background-color:rgba(255, 255, 255, 0);
-  border:none;
-  border-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-}
-#u528 {
-  border-width:0px;
-  position:absolute;
-  left:276px;
-  top:276px;
-  width:61px;
-  height:16px;
-}
-#u528_text {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:61px;
-  white-space:nowrap;
-}
 #u529_div {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
-  width:89px;
+  width:61px;
   height:16px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
@@ -215,9 +153,9 @@
 #u529 {
   border-width:0px;
   position:absolute;
-  left:252px;
-  top:316px;
-  width:89px;
+  left:469px;
+  top:251px;
+  width:61px;
   height:16px;
 }
 #u529_text {
@@ -225,10 +163,72 @@
   position:absolute;
   left:0px;
   top:0px;
+  width:61px;
+  white-space:nowrap;
+}
+#u530_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:61px;
+  height:16px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+#u530 {
+  border-width:0px;
+  position:absolute;
+  left:469px;
+  top:289px;
+  width:61px;
+  height:16px;
+}
+#u530_text {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:61px;
+  white-space:nowrap;
+}
+#u531_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:89px;
+  height:16px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+#u531 {
+  border-width:0px;
+  position:absolute;
+  left:445px;
+  top:329px;
+  width:89px;
+  height:16px;
+}
+#u531_text {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
   width:89px;
   white-space:nowrap;
 }
-#u530_img {
+#u532_img {
   border-width:0px;
   position:absolute;
   left:-13px;
@@ -236,15 +236,15 @@
   width:31px;
   height:215px;
 }
-#u530 {
+#u532 {
   border-width:0px;
   position:absolute;
-  left:554px;
-  top:394px;
+  left:747px;
+  top:407px;
   width:5px;
   height:200px;
 }
-#u530_text {
+#u532_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -253,7 +253,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u531_div {
+#u533_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -274,11 +274,11 @@
   text-decoration:underline;
   color:#CC0000;
 }
-#u531 {
+#u533 {
   border-width:0px;
   position:absolute;
-  left:484px;
-  top:604px;
+  left:677px;
+  top:617px;
   width:239px;
   height:19px;
   font-family:'Arial Negreta', 'Arial';
@@ -288,7 +288,7 @@
   text-decoration:underline;
   color:#CC0000;
 }
-#u531_text {
+#u533_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -296,7 +296,7 @@
   width:239px;
   word-wrap:break-word;
 }
-#u532_img {
+#u534_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -304,7 +304,7 @@
   width:1031px;
   height:43px;
 }
-#u532 {
+#u534 {
   border-width:0px;
   position:absolute;
   left:67px;
@@ -314,7 +314,7 @@
   font-size:20px;
   color:#006666;
 }
-#u532_text {
+#u534_text {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -322,7 +322,7 @@
   width:1027px;
   word-wrap:break-word;
 }
-#u533_div {
+#u535_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -339,7 +339,7 @@
   font-size:18px;
   color:#330099;
 }
-#u533 {
+#u535 {
   border-width:0px;
   position:absolute;
   left:981px;
@@ -349,11 +349,48 @@
   font-size:18px;
   color:#330099;
 }
-#u533_text {
+#u535_text {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
   width:78px;
   word-wrap:break-word;
+}
+#u536_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:73px;
+  height:22px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'Arial Negreta', 'Arial';
+  font-weight:700;
+  font-style:normal;
+}
+#u536 {
+  border-width:0px;
+  position:absolute;
+  left:620px;
+  top:197px;
+  width:73px;
+  height:22px;
+  font-family:'Arial Negreta', 'Arial';
+  font-weight:700;
+  font-style:normal;
+}
+#u536_text {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:73px;
+  white-space:nowrap;
 }
