--- a/ui/files/新增课程/styles.css
+++ b/ui/files/新增课程/styles.css
@@ -3,7 +3,7 @@
   background-image:none;
   position:static;
   left:auto;
-  width:1333px;
+  width:1338px;
   margin-left:0;
   margin-right:0;
   text-align:left;
@@ -12,13 +12,13 @@
   position:absolute;
   z-index:0;
 }
-#u534_div {
+#u537_div {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
   width:1244px;
-  height:748px;
+  height:860px;
   background:inherit;
   background-color:rgba(255, 255, 255, 1);
   box-sizing:border-box;
@@ -30,15 +30,15 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u534 {
+#u537 {
   border-width:0px;
   position:absolute;
-  left:89px;
-  top:152px;
+  left:94px;
+  top:49px;
   width:1244px;
-  height:748px;
+  height:860px;
 }
-#u534_text {
+#u537_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -47,7 +47,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u535 {
+#u538 {
   border-width:0px;
   position:absolute;
   left:619px;
@@ -55,7 +55,7 @@
   width:300px;
   height:25px;
 }
-#u535_input {
+#u538_input {
   position:absolute;
   left:0px;
   top:0px;
@@ -69,7 +69,7 @@
   color:#000000;
   text-align:left;
 }
-#u536 {
+#u539 {
   border-width:0px;
   position:absolute;
   left:619px;
@@ -77,7 +77,7 @@
   width:300px;
   height:25px;
 }
-#u536_input {
+#u539_input {
   position:absolute;
   left:0px;
   top:0px;
@@ -91,7 +91,7 @@
   color:#000000;
   text-align:left;
 }
-#u537 {
+#u540 {
   border-width:0px;
   position:absolute;
   left:619px;
@@ -99,7 +99,7 @@
   width:300px;
   height:25px;
 }
-#u537_input {
+#u540_input {
   position:absolute;
   left:0px;
   top:0px;
@@ -113,7 +113,7 @@
   color:#000000;
   text-align:left;
 }
-#u538_div {
+#u541_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -128,7 +128,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u538 {
+#u541 {
   border-width:0px;
   position:absolute;
   left:530px;
@@ -136,7 +136,7 @@
   width:61px;
   height:16px;
 }
-#u538_text {
+#u541_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -144,7 +144,7 @@
   width:61px;
   white-space:nowrap;
 }
-#u539_div {
+#u542_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -159,7 +159,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u539 {
+#u542 {
   border-width:0px;
   position:absolute;
   left:510px;
@@ -167,7 +167,7 @@
   width:89px;
   height:16px;
 }
-#u539_text {
+#u542_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -175,90 +175,12 @@
   width:89px;
   white-space:nowrap;
 }
-#u540_div {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:61px;
-  height:16px;
-  background:inherit;
-  background-color:rgba(255, 255, 255, 0);
-  border:none;
-  border-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-}
-#u540 {
-  border-width:0px;
-  position:absolute;
-  left:534px;
-  top:388px;
-  width:61px;
-  height:16px;
-}
-#u540_text {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:61px;
-  white-space:nowrap;
-}
-#u541_img {
-  border-width:0px;
-  position:absolute;
-  left:-13px;
-  top:-2px;
-  width:31px;
-  height:215px;
-}
-#u541 {
-  border-width:0px;
-  position:absolute;
-  left:641px;
-  top:404px;
-  width:5px;
-  height:200px;
-}
-#u541_text {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:0px;
-  visibility:hidden;
-  word-wrap:break-word;
-}
-#u542 {
-  border-width:0px;
-  position:absolute;
-  left:779px;
-  top:514px;
-  width:140px;
-  height:25px;
-}
-#u542_input {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:140px;
-  height:25px;
-  font-family:'Arial Normal', 'Arial';
-  font-weight:400;
-  font-style:normal;
-  font-size:13px;
-  text-decoration:none;
-  color:#333333;
-  text-align:center;
-}
 #u543_div {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
-  width:193px;
+  width:61px;
   height:16px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
@@ -271,9 +193,9 @@
 #u543 {
   border-width:0px;
   position:absolute;
-  left:619px;
-  top:614px;
-  width:193px;
+  left:534px;
+  top:388px;
+  width:61px;
   height:16px;
 }
 #u543_text {
@@ -281,7 +203,7 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:193px;
+  width:61px;
   white-space:nowrap;
 }
 #u544_img {
@@ -295,8 +217,8 @@
 #u544 {
   border-width:0px;
   position:absolute;
-  left:894px;
-  top:549px;
+  left:641px;
+  top:404px;
   width:5px;
   height:200px;
 }
@@ -309,7 +231,85 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u545_div {
+#u545 {
+  border-width:0px;
+  position:absolute;
+  left:779px;
+  top:514px;
+  width:140px;
+  height:25px;
+}
+#u545_input {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:140px;
+  height:25px;
+  font-family:'Arial Normal', 'Arial';
+  font-weight:400;
+  font-style:normal;
+  font-size:13px;
+  text-decoration:none;
+  color:#333333;
+  text-align:center;
+}
+#u546_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:193px;
+  height:16px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+#u546 {
+  border-width:0px;
+  position:absolute;
+  left:619px;
+  top:614px;
+  width:193px;
+  height:16px;
+}
+#u546_text {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:193px;
+  white-space:nowrap;
+}
+#u547_img {
+  border-width:0px;
+  position:absolute;
+  left:-13px;
+  top:-2px;
+  width:31px;
+  height:215px;
+}
+#u547 {
+  border-width:0px;
+  position:absolute;
+  left:894px;
+  top:549px;
+  width:5px;
+  height:200px;
+}
+#u547_text {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:0px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u548_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -330,7 +330,7 @@
   text-decoration:underline;
   color:#CC0000;
 }
-#u545 {
+#u548 {
   border-width:0px;
   position:absolute;
   left:813px;
@@ -344,7 +344,7 @@
   text-decoration:underline;
   color:#CC0000;
 }
-#u545_text {
+#u548_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -352,7 +352,7 @@
   width:239px;
   word-wrap:break-word;
 }
-#u546_img {
+#u549_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -360,21 +360,58 @@
   width:1031px;
   height:43px;
 }
-#u546 {
+#u549 {
   border-width:0px;
   position:absolute;
-  left:200px;
-  top:179px;
+  left:212px;
+  top:104px;
   width:1031px;
   height:43px;
   font-size:20px;
   color:#006666;
 }
-#u546_text {
+#u549_text {
   border-width:0px;
   position:absolute;
   left:2px;
   top:10px;
   width:1027px;
   word-wrap:break-word;
+}
+#u550_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:97px;
+  height:28px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'Arial Negreta', 'Arial';
+  font-weight:700;
+  font-style:normal;
+}
+#u550 {
+  border-width:0px;
+  position:absolute;
+  left:703px;
+  top:221px;
+  width:97px;
+  height:28px;
+  font-family:'Arial Negreta', 'Arial';
+  font-weight:700;
+  font-style:normal;
+}
+#u550_text {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:97px;
+  white-space:nowrap;
 }
